[gd_scene load_steps=5 format=3 uid="uid://player_node"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1"]
[ext_resource type="Texture2D" path="res://assets/player_sprite.png" id="2"]

[sub_resource type="CircleShape2D" id="1"]
radius = 15.0

[sub_resource type="Gradient" id="2"]
colors = PackedColorArray(1, 1, 1, 1, 0.5, 0.5, 0.5, 1)

[node name="Player" type="CharacterBody2D" groups=["player"]]
position = Vector2(400, 520)
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2")
scale = Vector2(0.5, 0.5)

[node name="ColorIndicators" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="ColorSwitchTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="ColorSwitchTimer" to="." method="_on_color_switch_timer_timeout"]